--- a/support.html
+++ b/support.html
@@ -17,15 +17,19 @@
 
     <!-- Top Nav -->
     <div class="footer-links">
-        <a href="pricing.html" id="link-pricing">Pricing</a> |
-        <a href="feedback.html" id="link-feedback">Feedback</a> |
+        <a href="feedback.html" id="link-feedback">Feedback</a>
         <a href="support.html" id="link-support" class="active-link">Support</a>
     </div>
 
     <div class="store-container" style="max-width: 600px; margin-top: 60px;">
-        <header class="store-header">
-            <img src="logo.png" alt="Logo" class="app-logo-small">
-            <h2>Support Center</h2>
+        <header class="store-header" style="justify-content: space-between;">
+            <div style="display: flex; align-items: center; gap: 15px;">
+                <img src="logo.png" alt="Logo" class="app-logo-small">
+                <h2>Support Center</h2>
+            </div>
+            <div class="header-actions">
+                <button id="btn-theme-toggle" class="icon-btn" title="Toggle Dark Mode">🌙</button>
+            </div>
         </header>
 
         <div class="tabs">
