Add Firebase Authentication & Multi-user Support
- Implemented Firebase Email/Password authentication
- Added user session management with automatic redirects
- Implemented user-scoped data isolation (files, folders, feedback, tickets)
- Fixed modal button interactivity (exposed to global scope)
- Optimized file loading speed (4x faster initialization)
- Added loading indicators to prevent empty state confusion
- Exposed note export functions (PDF, Word, Excel, Save to Store/Folder)
- Fixed race conditions in script initialization
- Simplified Firestore queries to avoid index requirements
- Improved overall app responsiveness and UX

--- a/store.html
+++ b/store.html
@@ -26,8 +26,8 @@
                 <img src="logo.png" alt="Logo" class="store-logo">
                 <div class="header-text">
                     <h2 id="college-name-display">College Name</h2>
-                    <p id="store-sub-header">Document Store ERP | Welcome, User
-                    </p>
+                    <p id="store-sub-header">Document Store ERP | Welcome, User</p>
+                    <p id="user-email-display" style="font-size: 0.75rem; color: #777; margin: 0;"></p>
                 </div>
             </div>
 
