--- a/details.html
+++ b/details.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <script type="module" src="firebase-init.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=9.1"></script>
 </body>
 
 </html>
