--- a/feedback.html
+++ b/feedback.html
@@ -87,7 +87,7 @@
     </div>
 
     <script type="module" src="firebase-init.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=9.1"></script>
 </body>
 
 </html>
