--- a/store.html
+++ b/store.html
@@ -32,10 +32,8 @@
             </div>
 
             <div class="header-right" style="display: flex; flex-direction: column; align-items: flex-end; gap: 5px;">
-                <div class="top-links" style="font-size: 0.85rem; font-weight: 600;">
-                    <a href="feedback.html"
-                        style="text-decoration: none; color: inherit; margin-right: 15px;">Feedback</a>
-                    <a href="support.html" style="text-decoration: none; color: inherit;">Support</a>
+                <div class="top-links" style="font-size: 0.85rem; font-weight: 600; display: none;">
+                    <!-- Links removed as per user request -->
                 </div>
                 <div class="header-actions" style="margin-top: 5px;">
                     <button id="btn-theme-toggle" class="icon-btn" title="Toggle Dark Mode">🌙</button>
@@ -70,17 +68,17 @@
                 <button class="btn-toolbar" onclick="formatText('insertOrderedList')" title="Numbered List">1.</button>
                 <div style="width: 1px; height: 20px; background: #ccc; margin: 0 10px;"></div>
                 <button class="btn-toolbar" onclick="formatText('justifyLeft')" title="Align Left">
-                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
                         <path d="M3 15h18v-2H3v2zm0 4h12v-2H3v2zm0-8h18V9H3v2zm0-6v2h18V5H3z" />
                     </svg>
                 </button>
                 <button class="btn-toolbar" onclick="formatText('justifyCenter')" title="Align Center">
-                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
                         <path d="M7 15h10v-2H7v2zM3 5v2h18V5H3zm0 8h18V9H3v2zm4 8h10v-2H7v2z" />
                     </svg>
                 </button>
                 <button class="btn-toolbar" onclick="formatText('justifyRight')" title="Align Right">
-                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
                         <path d="M3 21h18v-2H3v2zm6-4h12v-2H9v2zm-6-4h18v-2H3v2zm6-4h12V9H9v2zm-6-4h18V5H3v2z" />
                     </svg>
                 </button>
