--- a/store.html
+++ b/store.html
@@ -32,8 +32,10 @@
             </div>
 
             <div class="header-right" style="display: flex; flex-direction: column; align-items: flex-end; gap: 5px;">
-                <div class="top-links" style="font-size: 0.85rem; font-weight: 600; display: none;">
-                    <!-- Links removed as per user request -->
+                <div class="top-links" style="font-size: 0.95rem; font-weight: 600;">
+                    <a href="feedback.html" id="link-feedback"
+                        style="text-decoration: none; color: inherit; margin-right: 15px;">Feedback</a>
+                    <a href="support.html" id="link-support" style="text-decoration: none; color: inherit;">Support</a>
                 </div>
                 <div class="header-actions" style="margin-top: 5px;">
                     <button id="btn-theme-toggle" class="icon-btn" title="Toggle Dark Mode">🌙</button>
