--- a/store.html
+++ b/store.html
@@ -101,12 +101,8 @@
                 <div style="width: 1px; height: 20px; background: #ccc; margin: 0 10px;"></div>
                 <button class="btn-toolbar" onclick="insertTable(this)" title="Insert Table">Table</button>
                 <div style="width: 1px; height: 20px; background: #ccc; margin: 0 10px;"></div>
-                <label class="btn-toolbar" title="Text Color"
-                    style="padding: 0; overflow: hidden; height: 32px; width: 32px; display: flex; align-items: center; justify-content: center; background: none; border: none; cursor: pointer; position: relative;">
-                    <span style="font-size: 1.2rem;">🎨</span>
-                    <input type="color" onchange="formatText('foreColor', this.value)"
-                        style="position: absolute; top:0; left:0; width: 100%; height: 100%; opacity: 0; cursor: pointer;">
-                </label>
+                <button class="btn-toolbar" onclick="openColorPicker(this)" title="Text Color"
+                    style="font-size: 1.2rem;">🎨</button>
 
                 <span id="save-msg" class="save-status" style="margin-left: auto; font-size: 0.8rem;">Saved...</span>
             </div>
@@ -185,6 +181,48 @@
             </div>
         </div>
 
+    </div>
+
+    <!-- Color Picker Modal -->
+    <div id="color-picker-modal" class="modal-overlay">
+        <div class="modal-box" style="width: 320px; padding: 20px;">
+            <h3 style="margin-top:0; margin-bottom: 15px;">Select color</h3>
+
+            <div class="color-grid"
+                style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-bottom: 20px;">
+                <!-- Preset Colors -->
+                <button class="color-swatch" style="background: red;" onclick="selectColor('red')"></button>
+                <button class="color-swatch" style="background: cyan;" onclick="selectColor('cyan')"></button>
+                <button class="color-swatch" style="background: blue;" onclick="selectColor('blue')"></button>
+                <button class="color-swatch" style="background: lime;" onclick="selectColor('lime')"></button>
+
+                <button class="color-swatch" style="background: magenta;" onclick="selectColor('magenta')"></button>
+                <button class="color-swatch" style="background: yellow;" onclick="selectColor('yellow')"></button>
+                <button class="color-swatch" style="background: black;" onclick="selectColor('black')"></button>
+                <button class="color-swatch" style="background: white; border: 1px solid #ddd;"
+                    onclick="selectColor('white')"></button>
+            </div>
+
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px;">
+                <label style="cursor: pointer; color: #1a73e8; font-weight: 500;">
+                    Custom
+                    <input type="color" id="custom-color-input" style="opacity: 0; width: 0; height: 0;"
+                        onchange="selectColor(this.value)">
+                </label>
+
+                <div style="display: flex; align-items: center; gap: 10px;">
+                    <span style="font-size: 0.9rem; color: #666;">Chosen color</span>
+                    <div id="chosen-color-preview"
+                        style="width: 30px; height: 30px; border-radius: 4px; border: 1px solid #ccc; background: black;">
+                    </div>
+                </div>
+            </div>
+
+            <div class="button-group" style="justify-content: flex-end; gap: 15px;">
+                <button class="btn secondary" style="padding: 8px 20px;" onclick="closeColorPicker()">Cancel</button>
+                <button class="btn primary" style="padding: 8px 20px;" onclick="applySelectedColor()">Set</button>
+            </div>
+        </div>
     </div>
 
     <!-- Shared Modal -->
