Implement smart auth, password toggle, table export fixes, and AI voice welcome

--- a/store.html
+++ b/store.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css?v=7.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Export Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="vendor/jspdf.umd.min.js"></script>
     <script src="vendor/docx.js"></script>
     <script src="vendor/mammoth.browser.min.js"></script>
