--- a/store.html
+++ b/store.html
@@ -192,44 +192,70 @@
 
     <!-- Color Picker Modal -->
     <div id="color-picker-modal" class="modal-overlay">
-        <div class="modal-box" style="width: 320px; padding: 20px;">
-            <h3 style="margin-top:0; margin-bottom: 15px;">Select color</h3>
+        <div class="modal-box" style="width: 340px; padding: 25px; border-radius: 12px;">
+            <h3 style="margin-top:0; margin-bottom: 20px; font-weight:600; color:#333; text-align: left;">Text Color
+            </h3>
 
+            <!-- Standard Colors -->
+            <div style="text-align:left; margin-bottom: 10px; font-size: 0.85rem; color: #666; font-weight: 500;">
+                PRESETS</div>
             <div class="color-grid"
-                style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-bottom: 20px;">
-                <!-- Preset Colors -->
-                <button class="color-swatch" style="background: red;" onclick="selectColor('red')"></button>
-                <button class="color-swatch" style="background: cyan;" onclick="selectColor('cyan')"></button>
-                <button class="color-swatch" style="background: blue;" onclick="selectColor('blue')"></button>
-                <button class="color-swatch" style="background: lime;" onclick="selectColor('lime')"></button>
+                style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 10px; margin-bottom: 25px;">
+                <button class="color-swatch" style="background: #000000;" onclick="selectColor('#000000')"
+                    title="Black"></button>
+                <button class="color-swatch" style="background: #434343;" onclick="selectColor('#434343')"
+                    title="Dark Grey"></button>
+                <button class="color-swatch" style="background: #666666;" onclick="selectColor('#666666')"
+                    title="Grey"></button>
+                <button class="color-swatch" style="background: #999999;" onclick="selectColor('#999999')"
+                    title="Light Grey"></button>
+                <button class="color-swatch" style="background: #b7b7b7;" onclick="selectColor('#b7b7b7')"
+                    title="Silver"></button>
 
-                <button class="color-swatch" style="background: magenta;" onclick="selectColor('magenta')"></button>
-                <button class="color-swatch" style="background: yellow;" onclick="selectColor('yellow')"></button>
-                <button class="color-swatch" style="background: black;" onclick="selectColor('black')"></button>
-                <button class="color-swatch" style="background: white; border: 1px solid #ddd;"
-                    onclick="selectColor('white')"></button>
+                <button class="color-swatch" style="background: #d90000;" onclick="selectColor('#d90000')"
+                    title="Red"></button>
+                <button class="color-swatch" style="background: #f4c400;" onclick="selectColor('#f4c400')"
+                    title="Yellow"></button>
+                <button class="color-swatch" style="background: #008a00;" onclick="selectColor('#008a00')"
+                    title="Green"></button>
+                <button class="color-swatch" style="background: #00bdf4;" onclick="selectColor('#00bdf4')"
+                    title="Cyan"></button>
+                <button class="color-swatch" style="background: #0000ff;" onclick="selectColor('#0000ff')"
+                    title="Blue"></button>
             </div>
 
-            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px;">
-                <label style="cursor: pointer; color: #1a73e8; font-weight: 500; display: flex; align-items: center;">
-                    Custom
-                    <!-- Input covers the text for touch targets -->
-                    <input type="color" id="custom-color-input"
-                        style="opacity: 0; width: 1px; height: 1px; margin-left: 5px;"
-                        oninput="selectColor(this.value)">
-                </label>
+            <div style="height: 1px; background: #eee; margin-bottom: 20px;"></div>
 
+            <!-- Custom Section -->
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
                 <div style="display: flex; align-items: center; gap: 10px;">
-                    <span style="font-size: 0.9rem; color: #666;">Chosen color</span>
+                    <div
+                        style="position: relative; width: 36px; height: 36px; border-radius: 50%; overflow: hidden; border: 2px solid #ddd; cursor: pointer; transition: transform 0.2s;">
+                        <input type="color" id="custom-color-input"
+                            style="position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; cursor: pointer; border: none; padding: 0;"
+                            oninput="selectColor(this.value)">
+                    </div>
+                    <div style="text-align: left;">
+                        <div class="custom-label">Custom</div>
+                        <div class="custom-sublabel">Pick a color</div>
+                    </div>
+                </div>
+
+                <!-- Preview Box -->
+                <div style="text-align: right;">
+                    <div style="font-size: 0.8rem; color: #888; margin-bottom: 4px;">Selected</div>
                     <div id="chosen-color-preview"
-                        style="width: 30px; height: 30px; border-radius: 4px; border: 1px solid #ccc; background: black;">
+                        style="width: 40px; height: 40px; border-radius: 8px; border: 1px solid #ddd; background: #000; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                     </div>
                 </div>
             </div>
 
-            <div class="button-group" style="justify-content: flex-end; gap: 15px;">
-                <button class="btn secondary" style="padding: 8px 20px;" onclick="closeColorPicker()">Cancel</button>
-                <button class="btn primary" style="padding: 8px 20px;" onclick="applySelectedColor()">Set</button>
+            <div class="button-group" style="justify-content: flex-end; gap: 10px;">
+                <button class="btn secondary" style="border: 1px solid #ddd; padding: 10px 20px;"
+                    onclick="closeColorPicker()">Cancel</button>
+                <button class="btn primary"
+                    style="background: var(--primary-orange); border: none; padding: 10px 25px; font-weight: 600;"
+                    onclick="applySelectedColor()">Apply</button>
             </div>
         </div>
     </div>
