--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css?v=7.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Export Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="vendor/html2canvas.min.js"></script>
     <script src="vendor/jspdf.umd.min.js"></script>
     <script src="vendor/docx.js"></script>
     <script src="vendor/mammoth.browser.min.js"></script>
@@ -100,7 +100,12 @@
                     <option value="7">48</option>
                 </select>
                 <div style="width: 1px; height: 20px; background: #ccc; margin: 0 10px;"></div>
-                <button class="btn-toolbar" onclick="insertTable(this)" title="Insert Table">Table</button>
+                <button class="btn-toolbar" onclick="insertTable(this)" title="Insert Excel Table">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                        <path
+                            d="M20 2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM8 20H4v-4h4v4zm0-6H4v-4h4v4zm0-6H4V4h4v4zm6 12h-4v-4h4v4zm0-6h-4v-4h4v4zm0-6h-4V4h4v4zm6 12h-4v-4h4v4zm0-6h-4v-4h4v4zm0-6h-4V4h4v4z" />
+                    </svg>
+                </button>
                 <div style="width: 1px; height: 20px; background: #ccc; margin: 0 10px;"></div>
                 <button id="btn-color-picker" class="btn-toolbar" onclick="openColorPicker(this)" title="Text Color"
                     style="position: relative; padding: 5px; flex-direction: column; justify-content: center;">
@@ -122,16 +127,42 @@
             <!-- Bottom Export Bar -->
             <div class="export-bar"
                 style="display: flex; gap: 10px; margin-top: 15px; flex-wrap: wrap; justify-content: flex-end;">
-                <button class="btn secondary" style="font-size: 0.85rem; padding: 8px 15px;"
-                    onclick="saveNoteToPDF()">📄 PDF</button>
-                <button class="btn secondary" style="font-size: 0.85rem; padding: 8px 15px;"
-                    onclick="saveNoteToWord()">📝 Word</button>
-                <button class="btn secondary" style="font-size: 0.85rem; padding: 8px 15px;"
-                    onclick="saveNoteToExcel()">📊 Excel</button>
-                <button class="btn secondary" style="font-size: 0.85rem; padding: 8px 15px;"
-                    onclick="saveNoteToStore()">💾 Save into Store</button>
-                <button class="btn secondary btn-folder-yellow" onclick="saveNoteToFolder()">📂 Save
-                    to Folder...</button>
+                <button class="btn secondary btn-pill" onclick="saveNoteToPDF()">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="#e74c3c"
+                        style="margin-right: 8px; vertical-align: middle;">
+                        <path
+                            d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3.5H19v1h1.5V10H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z" />
+                    </svg>PDF
+                </button>
+                <button class="btn secondary btn-pill" onclick="saveNoteToWord()">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="#2980b9"
+                        style="margin-right: 8px; vertical-align: middle;">
+                        <path
+                            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z" />
+                    </svg>Word
+                </button>
+                <button class="btn secondary btn-pill" onclick="saveNoteToExcel()">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="#27ae60"
+                        style="margin-right: 8px; vertical-align: middle;">
+                        <path
+                            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z" />
+                        <path d="M8 12h8v2H8zm0 4h8v2H8z" opacity=".3" />
+                    </svg>Excel
+                </button>
+                <button class="btn secondary btn-pill" onclick="saveNoteToStore()">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="#34495e"
+                        style="margin-right: 8px; vertical-align: middle;">
+                        <path
+                            d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z" />
+                    </svg>Save into Store
+                </button>
+                <button class="btn secondary btn-folder-yellow btn-pill" onclick="saveNoteToFolder()">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"
+                        style="margin-right: 8px; vertical-align: middle;">
+                        <path
+                            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z" />
+                    </svg>Save to Folder...
+                </button>
             </div>
         </div>
 
